--- a/index.html
+++ b/index.html
@@ -6,7 +6,38 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <p>Styles Conference</p>
-    <p>Every year the brightest web designers and front-end developrs descend on Chicago to discuss the latest technologies. Join us this August!</p>
+    <header>    
+        <h1><a href="#">Styles Conference<h1></a>
+        <h3>August 24-26th &mdash; Chicago, IL</h3>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
+    </header>
+    <section>
+        <h2>Dedicated to the Craft of Building Websites</h2>
+        <p>Every year the brightest web designers and front-end developrs descend on Chicago to discuss the latest technologies. Join us this August!</p>
+    </section>
+    <a href="#">Register Now</a>
+    <a href="#">Speakers</a>
+    <a href="#">World-Class Speakers</a>
+    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their storeis.</p>
+    <a href="#">Schedule</a>
+    <a href="#">Three Inspiring Days</a>
+    <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+    <a href="#">Venue</a>
+    <a href="#">The Chicago Theater</a>
+    <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
+    <p>	&#169; Styles Conference</p>
+    <nav>
+            <a href="index.html">Home</a>
+            <a href="speakers.html">Speakers</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="venue.html">Venue</a>
+            <a href="register.html">Register</a>
+        </nav>
 </body>
 </html>
