adds speakers section

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
     <section>
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developrs descend on Chicago to discuss the latest technologies. Join us this August!</p>
+        <a href="#">Register Now</a>
     </section>
-    <a href="#">Register Now</a>
-    <a href="#">Speakers</a>
-    <a href="#">World-Class Speakers</a>
-    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their storeis.</p>
+    <section>
+        <section>
+            <h5><a href="#">Speakers</a></h5>
+            <h3><a href="#">World-Class Speakers</a></h3>
+            <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section>
+    </section>
+    
     <a href="#">Schedule</a>
     <a href="#">Three Inspiring Days</a>
     <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
