adds schedule and venue sections

--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
             <h3><a href="#">World-Class Speakers</a></h3>
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
         </section>
+        <section>
+            <a href="#">Schedule</a>
+        <a href="#">Three Inspiring Days</a>
+        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section>
+        <section>
+        <a href="#">Venue</a>
+        <a href="#">The Chicago Theater</a>
+        <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
+        </section>
     </section>
     
-    <a href="#">Schedule</a>
-    <a href="#">Three Inspiring Days</a>
-    <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-    <a href="#">Venue</a>
-    <a href="#">The Chicago Theater</a>
-    <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
     <p>	&#169; Styles Conference</p>
     <nav>
             <a href="index.html">Home</a>
