--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
             <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
         </section>
         <section>
-            <a href="#">Schedule</a>
-        <a href="#">Three Inspiring Days</a>
-        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+            <h5><a href="#">Schedule</a></h5>
+            <h3><a href="#">Three Inspiring Days</a></h3>
+            <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
         </section>
         <section>
-        <a href="#">Venue</a>
-        <a href="#">The Chicago Theater</a>
-        <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
+            <h5><a href="#">Venue</a></h5>
+            <h3><a href="#">The Chicago Theater</a></h3>
+            <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
         </section>
     </section>
+    <footer>
+        <small>&#169; Styles Conference</small>
+    </footer>
     
-    <p>	&#169; Styles Conference</p>
     <nav>
             <a href="index.html">Home</a>
             <a href="speakers.html">Speakers</a>
