--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>    
+    <header class="container">    
         <h1><a href="#">Styles Conference<h1></a>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
@@ -39,7 +39,7 @@
             <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
         </section>
     </section>
-    <footer>
+    <footer class="container">
         <small>&#169; Styles Conference</small>
          <nav>
             <a href="index.html">Home</a>
