adds container class to the sections

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <section>
+    <section class="container">
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developrs descend on Chicago to discuss the latest technologies. Join us this August!</p>
         <a href="#">Register Now</a>
     </section>
-    <section>
+    <section class="container">
         <section>
             <h5><a href="#">Speakers</a></h5>
             <h3><a href="#">World-Class Speakers</a></h3>
