--- a/schedule.html
+++ b/schedule.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>    
-        <h1><a href="#">Styles Conference<h1></a>
+    <header>
+        <section class="container">    
+            <h1><a href="#">Styles Conference</a><h1>
+        </section>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
