--- a/venue.html
+++ b/venue.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <header>    
-        <h1><a href="#">Styles Conference<h1></a>
+        <section class="container">    
+            <h1><a href="#">Styles Conference</a><h1>
+        </section>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
