--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <section class="container">
+    <section class="hero container">
         <h2>Dedicated to the Craft of Building Websites</h2>
         <p>Every year the brightest web designers and front-end developrs descend on Chicago to discuss the latest technologies. Join us this August!</p>
         <a class="btn btn-alt" href="#">Register Now</a>
