adds logo class and styling to h1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="container">    
-        <h1 class"logo"><a href="#">Styles <br> Conference<h1></a>
+        <h1 class="logo"><a href="#">Styles <br> Conference<h1></a>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
