--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header class="container">    
+    <header class="container group">    
         <h1 class="logo"><a href="#">Styles <br> Conference<h1></a>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
