--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header class="container group">    
-        <h1 class="logo"><a href="#">Styles <br> Conference<h1></a>
+        <h1 class="logo"><a href="#">Styles <br> Conference</a><h1>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
@@ -39,7 +39,7 @@
             <p>Within the heart of downtown Chicago, The Chicago Thearte will provide a beautiful conference venue.</p>
         </section>
     </section>
-    <footer class="container">
+    <footer class="primary-footer container group">
         <small>&#169; Styles Conference</small>
          <nav>
             <a href="index.html">Home</a>
