--- a/schedule.html
+++ b/schedule.html
@@ -6,10 +6,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <header>
-        <section class="container">    
-            <h1><a href="#">Styles Conference</a><h1>
-        </section>
+    <header class="container group">
+            <h1 class="logo"><a href="#">Styles <br> Conference</a><h1>
         <h3>August 24-26th &mdash; Chicago, IL</h3>
         <nav>
             <a href="index.html">Home</a>
@@ -19,7 +17,10 @@
             <a href="register.html">Register</a>
         </nav>
     </header>
-    <footer>
+    <section class="container">
+        <h1>Schedule</h1>
+    </section>
+    <footer class="primary-footer container group">
         <small>&#169; Styles Conference</small>
          <nav>
             <a href="index.html">Home</a>
